fix gallery page to be more responsive on small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -739,4 +739,8 @@ select {
   .footer-distributed {
     padding: 55px 30px;
   }
+
+  .gallery-image {
+    padding-top: 200px;
+  }
 }
